--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "build": "rm -rf ./build && NODE_ENV=\"production\" webpack",
     "lint-break-on-errors": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx",
     "lint": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx || true",
-    "preview": "rm -rf ./build && NODE_ENV=\"production\" webpack-dashboard -t 'Base Package' -- webpack-dev-server"
+    "preview": "rm -rf ./build && NODE_ENV=\"production\" webpack-dashboard -t 'Base Package' -- webpack-dev-server",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "engine-strict": true,
   "engines": {
     "node": ">= 6.11.0"
   },
   "devDependencies": {
+    "@storybook/react": "^3.2.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -39,6 +42,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "grommet": "^1.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
