--- a/package.json
+++ b/package.json
@@ -43,8 +43,17 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "grommet": "^1.6.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   }
 }
